--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
-  }
+  },
+  "name": "freedom-games-backend",
+  "version": "1.0.0",
+  "description": "This is the backend. Password is SECURITY_ENV_KEY = ************",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AERESAL/freedom-games-backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AERESAL/freedom-games-backend/issues"
+  },
+  "homepage": "https://github.com/AERESAL/freedom-games-backend#readme"
 }
